# malibu

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  RELEASES.md  SECURITY.md  alembic.ini  docker-compose.yml  hello.txt  install  malibu-public-api.md  malibu-through-exploration.md  merge_drafts.py  package.json  plan_trace_20260318_231929.json  plan_tracer.md  pyproject.toml  tool_diag_20260318_230235.json  tool_diag_20260318_231057.json  tool_diag_20260318_231237.json  tool_diag_20260318_231426.json  tool_diag_20260318_231442.json  tool_diag_20260318_231718.json  tool_diag_20260318_231836.json  tool_diag_20260318_231852.json  turbo.json
.github/: TEAM_MEMBERS
.github/workflows/: ci.yml  release.yml
.malibu/agent/: translator.md
.malibu/command/: issues.md
.malibu/glossary/: README.md  br.md  bs.md  da.md  es.md  fr.md  ru.md  th.md  tr.md
.malibu/tool/: github-pr-search.ts  github-triage.ts
.opencode/: opencode.jsonc
.opencode/agent/: translator.md
.opencode/command/: issues.md
.opencode/glossary/: README.md  ar.md  br.md  bs.md  da.md  de.md  es.md  fr.md  ja.md  ko.md  no.md  pl.md  ru.md  th.md  tr.md  zh-cn.md  zh-tw.md
.opencode/themes/: mytheme.json
.opencode/tool/: github-pr-search.ts  github-triage.ts
archive/: ACP_PRACTICAL_GUIDE.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  output.txt  test_astream.py
archive/.malibu/: malibu.jsonc
archive/malibu/: __init__.py  __main__.py  config.py  subprocess_compat.py
archive/old_malibu/: ACP_COMPLETE_GUIDE.md  ACP_README.md  malibu-public-api.md
archive/scripts/: run_server.sh  setup_db.sh  test_duet.py  test_tool_calling.py
archive/tests/: test_agent_interrupts.py  test_auth.py  test_cli.py  test_config_full.py  test_config_options.py  test_git_operations.py  test_hooks_integration.py  test_middleware.py  test_plugins.py  test_prompts.py  test_security.py  test_session_display.py  test_terminal_mgr.py  test_tools.py  test_tui_state.py  (+1 more)
deepagents_cli/: app.py
deepagentsjs/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
investigation/: 01-root-structure.md  02-packages-overview.md  03-packages-opencode-src.md  04-keep-vs-remove.md  05-final-architecture.md  README.md
malibu/: __init__.py  __main__.py  config.py  local_agent_connection.py
patches/: langchain@1.2.34.patch
script/: changelog.ts  publish.ts  stats.ts
scripts/: run_duet.sh  test_plan_agent.py  test_runtime.py  test_tool_calling.py
tests/: conftest.py  test_agent_interrupts.py  test_agents.py  test_api.py  test_cli.py  test_config.py  test_config_full.py  test_deepagent_tools.py  test_extensions.py  test_file_ops.py  test_langchain_agent_tools.py  test_local_agent_connection.py  test_malibu_agent.py  test_malibu_namespace.py  test_modes.py  test_plans.py  test_server_auth.py  test_sessions.py  test_shell_tools.py  test_state.py  test_system_prompt.py  test_telemetry.py  test_tools.py  test_tracing.py  test_tui_app.py  test_tui_bridge_ext.py  test_tui_chat_screen.py  test_tui_commands.py  test_websocket.py
vibe/core/deepagent/agent_infra_sandbox/langchain_tools/: README.md  __init__.py  client.py  pyproject.toml  session.py  session_tools.py  toolkit.py
vibe/core/deepagent/agent_infra_sandbox/langchain_tools/examples/: backend_integration.py  basic_usage.py  browser_automation.py  langchain_agent.py  multi_agent_example.py  session_example.py
vibe/core/deepagent/agent_infra_sandbox/langchain_tools/tools/: __init__.py  browser_tools.py  code_tools.py  file_tools.py  grep_tool.py  mcp_tools.py  sandbox_tools.py  shell_tools.py
(+1008 files in other folders)
